<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.yoba.tinkoff.converter.ConverterActivityViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/converter_activity_convert_from_hint"
                app:helperText="@string/convert_activity_convert_from_helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.isLoading}"
                    android:text="@={viewModel.fromCurrency}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/convert_activity_convert_to_hint"
                app:helperText="@string/convert_activity_convert_to_helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.isLoading}"
                    android:text="@={viewModel.toCurrency}" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:visible="@{!viewModel.convertionResult.isEmpty() &amp;&amp; viewModel.error.isEmpty()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/convert_activity_result_label"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{viewModel.convertionResult}"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="Alo" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@{viewModel.error}"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                app:visible="@{!viewModel.error.isEmpty()}" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="@{!viewModel.isLoading()}"
                android:onClick="@{() -> viewModel.convert()}"
                android:text="@string/convert_activity_convert_button_text"
                android:textColor="@color/black"
                app:backgroundTint="@color/yellow" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                app:visible="@{viewModel.isLoading}" />
        </LinearLayout>
    </ScrollView>
</layout>
